# services-reloader

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Makefile  README.rst  entry-points.txt  package-lock.json  pyproject.toml  setup.py
conf/: assets.yaml
nagare/services/: reloader.py
nagare/static/: livereload.js
src/nagare/custom_build/: build_assets.py
src/nagare/services/: reloader.py
src/nagare/static/: livereload.js
