# --
# Copyright (c) 2014-2026 Net-ng.
# All rights reserved.
#
# This software is licensed under the BSD License, as described in
# the file LICENSE.txt, which you should have received as part of
# this distribution.
# --

[build-system]
requires = [
    'setuptools',
    'wheel',
    'setuptools_scm',
    'webassets',
    'webassets-browserify',
    'PyYAML'
]
build-backend = 'backend'
backend-path = ['src/nagare/custom_build']

[tool.setuptools_scm]

[project]
name = 'nagare-services-reloader'
dynamic = ['version', 'entry-points']
description = 'Reloader service'
authors = [{ name = 'Net-ng' }, { email = 'contact@net-ng.com' }]
license = { file = 'LICENSE.txt' }
requires-python = '>=3.10'
dependencies = [
    'watchdog',
    'webob',
    "legacy-cgi ; python_full_version>='3.13.0a1'",
    'nagare-server',
]

[project.readme]
file = 'README.rst'
content-type = 'text/x-rst'

[tool.setuptools.dynamic]
entry-points = { file = 'entry-points.txt' }

[tool.setuptools.package-data]
'nagare.static' = ['*']

[project.optional-dependencies]
dev = ['sphinx', 'sphinx_rtd_theme', 'pre-commit', 'ruff', 'pytest', 'twine', 'webassets', 'webassets-browserify']

[project.urls]
Homepage = 'https://nagare.org'
Documentation = 'https://nagare.org/doc'
Source = 'https://github.com/nagareproject/services-reloader'
Tracker = 'https://github.com/nagareproject/services-reloader/issues'

[tool.ruff]
src = ['src']
line-length = 120
format.quote-style = 'single'

[tool.ruff.lint]
select = [
    'C4',
    'COM',
    'D',
    'E',
    'ERA',
    'F',
    'I',
    'ISC',
    'INP',
    'PIE',
    'Q',
    'S',
    'SIM',
    'TID',
    'W',
    'YTT',
]
ignore = ['COM812', 'D10', 'D401', 'S603', 'ISC001']
isort.length-sort = true
pydocstyle.convention = 'google'
flake8-quotes.inline-quotes = 'single'

[tool.pytest.ini_options]
testpaths = ['tests']
